# lpacpi

./: .clang-format  .clangd  CMakeLists.txt  LICENSE  Makefile
include/lpacpi/: byte_stream.h  common.h  defblock.h
samples/: DSDT
src/: byte_stream.cpp  defblock.cpp  main.cpp
